--- a/app/src/main/res/layout/item_hero.xml
+++ b/app/src/main/res/layout/item_hero.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -35,6 +35,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:maxLines="2"
+            android:ellipsize="end"
             tools:text="Es un antiheroe"/>
 
     </LinearLayout>
