--- a/app/src/main/res/layout/item_hero.xml
+++ b/app/src/main/res/layout/item_hero.xml
@@ -27,16 +27,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@android:color/white"
             tools:text="Deadpool" />
 
         <TextView
             android:id="@+id/heroOverviewTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-            android:maxLines="2"
             android:ellipsize="end"
-            tools:text="Es un antiheroe"/>
+            android:maxLines="2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@android:color/white"
+            tools:text="Es un antiheroe" />
 
     </LinearLayout>
 
