--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorPrimaryLight">#FF6363</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="editTextHintColor">#a7acb0</color>
 </resources>
