--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<MotionScene xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <ConstraintSet android:id="@+id/start">
-      <Constraint android:id="@+id/main_toolbar"/>
-  </ConstraintSet>
-
-  <ConstraintSet android:id="@+id/end">
-      <Constraint android:id="@id/main_toolbar"/>
-  </ConstraintSet>
-
-  <Transition
-      app:constraintSetStart="@+id/start"
-      app:constraintSetEnd="@id/end" />
+    <Transition
+        app:constraintSetEnd="@layout/activity_main_motion_layout_end"
+        app:constraintSetStart="@layout/activity_main_motion_layout_start"
+        app:layoutDuringTransition="honorRequest"
+        app:motionInterpolator="linear">
+        <OnSwipe
+            app:dragDirection="dragUp"
+            app:touchAnchorSide="top" />
+    </Transition>
 </MotionScene>
