--- a/app/src/main/res/layout/comic_list_item.xml
+++ b/app/src/main/res/layout/comic_list_item.xml
@@ -5,46 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
+    android:elevation="2dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:padding="16dp">
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/iv_comic_thumbnail"
-            android:layout_width="0dp"
-            android:layout_height="128dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="160dp"
+            android:layout_height="0dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="9:16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/comic_thumbnail" />
-
-        <Space
-            android:id="@+id/sp_comic_thumbnail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_comic_thumbnail"
-            app:layout_constraintVertical_weight="1" />
 
         <TextView
             android:id="@+id/tv_comic_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:textColor="@android:color/white"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sp_comic_thumbnail"
+            app:layout_constraintStart_toEndOf="@id/iv_comic_thumbnail"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Marvel Age Spider-Man Vol. 2: Everyday Hero (Digest)" />
 
         <TextView
@@ -52,11 +44,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:ellipsize="end"
+            android:lines="12"
+            android:textColor="@android:color/white"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/tv_comic_title"
+            app:layout_constraintStart_toStartOf="@id/tv_comic_title"
             app:layout_constraintTop_toBottomOf="@id/tv_comic_title"
+            app:layout_constraintVertical_bias="0"
             tools:text="The Marvel Age of Comics continues! This time around, Spidey meets his match against such classic villains as Electro and the Lizard, and faces the return of one of his first foes: the Vulture! Plus: Spider-Man vs. the Living Brain, Peter Parker's fight with Flash Thompson, and the wall-crawler tackles the high-flying Human Torch!" />
 
 
